@@ -48,6 +48,7 @@ public class MapData
     private static final String VC_MARKERS = "vc.txt";
     private static final String IMPASSIBLE = "Impassible";
     private static final String IPC_PLACE_FILE = "ipc_place.txt";
+    private static final String TERRITORY_NAME_PLACE_FILE = "name_place.txt";
     private static final String DONT_DRAW_TERRITORY_NAME = "dont_draw_territory_names";
 
     private static final String DECORATIONS_FILE = "decorations.txt";
@@ -75,6 +76,10 @@ public class MapData
 
     //maps String -> Point    
     private Map<String,Point> m_ipcPlace;
+    
+    //maps String -> Point    
+    private Map<String,Point> m_namePlace;
+
     
     //maps String -> Point
     private Map<String,Point> m_capitolPlace;
@@ -128,7 +133,8 @@ public class MapData
             m_centers = PointFileReaderWriter.readOneToOne(loader.getResourceAsStream(prefix + CENTERS_FILE));
             m_vcPlace = PointFileReaderWriter.readOneToOne(loader.getResourceAsStream(prefix + VC_MARKERS));
             m_capitolPlace = PointFileReaderWriter.readOneToOne(loader.getResourceAsStream(prefix + CAPITAL_MARKERS));
-            m_ipcPlace = PointFileReaderWriter.readOneToOne(loader.getResourceAsStream(prefix + IPC_PLACE_FILE));            
+            m_ipcPlace = PointFileReaderWriter.readOneToOne(loader.getResourceAsStream(prefix + IPC_PLACE_FILE));
+            m_namePlace = PointFileReaderWriter.readOneToOne(loader.getResourceAsStream(prefix + TERRITORY_NAME_PLACE_FILE)); 
             m_mapProperties = new Properties();
             loadDecorations();
             
@@ -429,6 +435,14 @@ public class MapData
             return m_ipcPlace.get(terr.getName());
         return null;  
     }
+    
+    public Point getNamePlacementPoint(Territory terr)
+    {
+        if(m_namePlace.containsKey(terr.getName()))
+            return m_namePlace.get(terr.getName());
+        return null;  
+    }
+    
     
     /**
      * Get the territory at the x,y co-ordinates could be null.
