@@ -1,3 +1,5 @@
+* allow controlling of name placements using name_place.txt (sgb)
+
 * fix sea zone boundaries when map is scaled (sgb)
 
 * add great_war mode (surtur2 and Triplelk)
